--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Rider-A Traffic Solution</string>
+    <string name="select_one">Select One</string>
 </resources>
