DriverLocationUpdate class added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Rider-A Traffic Solution</string>
     <string name="select_one">Select One</string>
     <string name="title_activity_show_bus_loation">Map</string>
+    <string name="title_activity_driver_location_update">Map</string>
 </resources>
