--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="select_one">Select One</string>
     <string name="title_activity_show_bus_loation">Map</string>
     <string name="title_activity_driver_location_update">Map</string>
+    <string name="title_activity_request_confirm">Map</string>
 </resources>
