Bus driver location update window added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="title_activity_test_maps">Map</string>
     <string name="title_activity_user_side_driver_location_update">Map</string>
     <string name="title_activity_driver_initial_set_location">Map</string>
+    <string name="title_activity_bus_driver_location_update">Map</string>
 </resources>
